# triangle

./: CMakeLists.txt  LICENSE  README.md  main.c  shader.frag  shader.vert
